hphp/hack/test/typecheck/suspend_outside_of_coroutines1.php.exp
File "suspend_outside_of_coroutines1.php", line 4, characters 8-19:
suspend is only allowed in coroutines. (NastCheck[3038])
