hphp/hack/test/typecheck/suspend_outside_of_coroutines1.php
<?hh // strict

function f($b) {
  $a = suspend $b();
}
